// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> component renders correctly with site name prop 1`] = `
<header
  className="MuiBox-root MuiBox-root-82 MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
  itemScope={true}
  itemType="https://schema.org/WPHeader"
  role="banner"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <h1
      className="MuiTypography-root MuiTypography-body1"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
        href="/"
        onBlur={[Function]}
        onFocus={[Function]}
        target="_self"
      >
        Site name
      </a>
    </h1>
  </div>
</header>
`;

exports[`<Header/> component renders correctly without props 1`] = `
<header
  className="MuiBox-root MuiBox-root-41 MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
  itemScope={true}
  itemType="https://schema.org/WPHeader"
  role="banner"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <h1
      className="MuiTypography-root MuiTypography-body1"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
        href="/"
        onBlur={[Function]}
        onFocus={[Function]}
        target="_self"
      >
        
      </a>
    </h1>
  </div>
</header>
`;
